# question-gen-rl

./: .env.example  .gitignore  AGENTS-DATA-GEN-GUIDE.md  Makefile  PRD-online-rl-add-on.md  PRD.md  README.md  TRAINING_SUMMARY.md  pyproject.toml  setup.sh
configs/: offline_config.yaml  online_config.yaml  train_config.yaml
data/: backend_roles.json
data/processed/: test.parquet  train.parquet
data/raw/: test.parquet  train.parquet
feedback-ui/: README.md  app.py  database.py  generator.py  requirements.txt
feedback-ui/data/: feedback.db
feedback-ui/static/: styles.css
feedback-ui/templates/: base.html  feedback_detail.html  index.html  stats.html
outputs/2025-12-07/04-17-15/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-07/04-21-06/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-07/04-24-01/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-07/04-27-14/.hydra/: hydra.yaml
outputs/2025-12-07/04-35-06/.hydra/: hydra.yaml
outputs/2025-12-07/04-47-16/.hydra/: hydra.yaml
outputs/2025-12-07/04-49-47/.hydra/: hydra.yaml
outputs/2025-12-07/05-00-22/.hydra/: hydra.yaml
outputs/2025-12-07/06-18-30/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-07/06-31-33/.hydra/: config.yaml  (+1 more)
results/: README.md  eval_results.json  rl_training_run_2025-12-07.json
scripts/: analyze_results.py  download_model.py  eval.py  export_merged_model.py  format_prompts.py  plot_training.py  prepare_dataset.py  test_endpoint.py  train.sh
src/recruiter/: __init__.py  dataset.py  env.py  human_feedback.py  main.py  metrics_logger.py  prompts.py  reward.py  schemas.py
(+16 files in other folders)
